	second argument (Pid) was missing!

	* src/core/exmpp_stream.erl, src/core/exmpp_compress.erl: Style.

	* src/core/exmpp_xml.erl: Accept atoms and integers as attribute
	value. They're converted to binary internally and it's not possible to
	get them back in their original type.

	* src/core/exmpp_presence.erl: Use exmpp_xml:get_cdata_as_list/1
	instead of binary_to_list/1.

2008-07-02  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/core/exmpp_jid.erl: Update jid() documentation.

2008-07-01  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/core/exmpp_stanza.erl, src/core/exmpp_iq.erl: Accept a standard
	condition as 'Error'. It's much easier to make error stanza with this.

	* src/core/exmpp_iq.erl (error): Fix a bug while setting ID: the
	function to call is exmpp_stanza:set_id_in_attrs/2, not
	exmpp_stanza:set_id/2.

	* testsuite/check_xml_converters.erl: Fix testsuite after
	exmpp_xml:document_fragment_to_list/3 was renamed.

	* src/core/exmpp_iq.erl (error/2, error_without_original/2): Fix
	copy&paste error: use exmpp_stanza:error/2, not exmpp_iq:error/2 to
	build the <error/> element.

	* src/core/exmpp_stanza.erl (set_type/2, set_type_in_attrs/2): Accept
	an atom() as Type. It's more consistent with exmpp_iq:get_type/1 &
	friends return values.

	* src/core/exmpp_iq.erl: Add a function get_kind/1 which tells if an
	<iq/> is a request or a response.

	* src/core/exmpp_xml.erl: Add functions get_ns_as_list/1 and
	get_ns_as_atom/1 to get the namespace of an XML element in an expected
	encoding.

2008-06-30  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* testsuite/test.sh: erl(1) is called with the +B flags so that ^C
	interrupts the process immediately. To terminate the Erlang process,
	we use halt() instead of init:stop(); this is a lot faster and
	acceptable for a testsuite. Add a new 'FAIL' case for $exit_code.

	* testsuite/testsuite.erl: Test modules now use the new