@@ -12,6 +12,9 @@
 	* src/core/exmpp_presence.erl: Use exmpp_xml:get_cdata_as_list/1
 	instead of binary_to_list/1.
 
+	* src/core/exmpp_xmlstream.erl: A function was left behind: it now
+	uses exceptions too.
+
 2008-07-02  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
 
 	* src/core/exmpp_jid.erl: Update jid() documentation.
